# OgrePinball

./: .gitignore  CMakeLists.txt  Implementation plan and README.txt  Makefile  README  README.txt  REPORT  ogre.cfg  resources.cfg
code/: Ball.cpp  Ball.h  BaseApplication.cpp  BaseApplication.h  Brick.cpp  Brick.h  Coin.cpp  Coin.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameCEGUI.cpp  GameObject.cpp  GameObject.h  GameState.h  GyroInput.cpp  GyroInput.h  Makefile  Makefile.am  Makefile.in  MultiPlayerState.h  Network.cpp  Network.h  Obstacle.cpp  Obstacle.h  OgreApp  Paddle.cpp  Paddle.h  PitPlane.cpp  PitPlane.h  SinglePlayerState.cpp  SinglePlayerState.h  TutorialApplication.cpp  TutorialApplication.h  Wall.cpp  Wall.h  buildit  compile  config.status  (+2 more)
code/.deps/: OgreApp-BaseApplication.Po  OgreApp-Entity.Po  OgreApp-Game.Po  OgrePinball-BaseApplication.Po  OgrePinball-Entity.Po  OgrePinball-Game.Po
code/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
media/materials/programs/: brick.glsl
media/materials/scripts/: brick.material  coin.material  obstacle.material  paddle.material  wall.material
